package main

import (
	"bufio"
	"context"
	"fmt"
	"io"
	"log"
	"os"
	"strings"
	"time"

	pb "github.com/Artanis2333/grpc-game/proto"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/keepalive"
)

const (
	serverAddr        = "localhost:50051"
	connectionTimeout = 10 * time.Second // è¿æ¥è¶…æ—¶æ—¶é—´
	streamTimeout     = 5 * time.Minute  // æµè¶…æ—¶æ—¶é—´
	heartbeatInterval = 30 * time.Second // å¿ƒè·³é—´éš”
)

// GameClient æ¸¸æˆå®¢æˆ·ç«¯
type GameClient struct {
	client   pb.GameServiceClient
	playerID string
	stream   pb.GameService_BidirectionalStreamClient
	done     chan bool
}

// NewGameClient åˆ›å»ºæ–°çš„æ¸¸æˆå®¢æˆ·ç«¯
func NewGameClient(playerID string) (*GameClient, error) {
	// é…ç½® keepalive å‚æ•°
	kacp := keepalive.ClientParameters{
		Time:                10 * time.Second, // å‘é€ keepalive ping çš„é—´éš”
		Timeout:             3 * time.Second,  // ç­‰å¾… keepalive ping å“åº”çš„è¶…æ—¶æ—¶é—´
		PermitWithoutStream: true,             // å…è®¸æ— æµæ—¶å‘é€ keepalive
	}

	// åˆ›å»ºå¸¦è¶…æ—¶çš„è¿æ¥ context
	ctx, cancel := context.WithTimeout(context.Background(), connectionTimeout)
	defer cancel()

	// è¿æ¥åˆ°æœåŠ¡å™¨
	conn, err := grpc.DialContext(
		ctx,
		serverAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithKeepaliveParams(kacp),
		grpc.WithBlock(), // é˜»å¡ç›´åˆ°è¿æ¥å»ºç«‹
	)
	if err != nil {
		return nil, fmt.Errorf("è¿æ¥æœåŠ¡å™¨å¤±è´¥: %v", err)
	}

	log.Printf("æˆåŠŸè¿æ¥åˆ°æœåŠ¡å™¨ %s", serverAddr)

	client := pb.NewGameServiceClient(conn)

	return &GameClient{
		client:   client,
		playerID: playerID,
		done:     make(chan bool),
	}, nil
}

// Start å¯åŠ¨å®¢æˆ·ç«¯
func (c *GameClient) Start() error {
	// åˆ›å»ºå¸¦è¶…æ—¶çš„ context
	ctx, cancel := context.WithTimeout(context.Background(), streamTimeout)
	defer cancel()

	// å»ºç«‹åŒå‘æµ
	stream, err := c.client.BidirectionalStream(ctx)
	if err != nil {
		return fmt.Errorf("åˆ›å»ºæµå¤±è´¥: %v", err)
	}
	c.stream = stream

	// å‘é€åˆå§‹è¿æ¥è¯·æ±‚
	if err := c.sendRequest(pb.RequestType_REQUEST_CHAT, "æˆ‘å·²åŠ å…¥æ¸¸æˆ"); err != nil {
		return fmt.Errorf("å‘é€åˆå§‹è¯·æ±‚å¤±è´¥: %v", err)
	}

	// å¯åŠ¨æ¥æ”¶æ¶ˆæ¯çš„åç¨‹
	go c.receiveMessages()

	// å¯åŠ¨å¿ƒè·³åç¨‹
	go c.heartbeat(ctx)

	// å¯åŠ¨ç”¨æˆ·è¾“å…¥å¤„ç†
	c.handleUserInput()

	return nil
}

// receiveMessages æ¥æ”¶æ¥è‡ªæœåŠ¡å™¨çš„æ¶ˆæ¯
func (c *GameClient) receiveMessages() {
	for {
		resp, err := c.stream.Recv()
		if err == io.EOF {
			log.Println("æœåŠ¡å™¨å…³é—­äº†è¿æ¥")
			c.done <- true
			return
		}
		if err != nil {
			log.Printf("æ¥æ”¶æ¶ˆæ¯é”™è¯¯: %v", err)
			c.done <- true
			return
		}

		// æ˜¾ç¤ºæ¶ˆæ¯ï¼ˆé™¤äº†å¿ƒè·³å“åº”ï¼‰
		if resp.Type != pb.ResponseType_RESPONSE_HEARTBEAT {
			timestamp := time.Unix(resp.Timestamp, 0).Format("15:04:05")
			
			switch resp.Type {
			case pb.ResponseType_RESPONSE_CHAT:
				fmt.Printf("[%s] %s: %s\n", timestamp, resp.FromPlayerId, resp.Content)
				
			case pb.ResponseType_RESPONSE_ACTION:
				fmt.Printf("[%s] ğŸ® %s æ‰§è¡Œäº†åŠ¨ä½œ: %s\n", timestamp, resp.FromPlayerId, resp.Content)
				
			case pb.ResponseType_RESPONSE_SYSTEM:
				if resp.SystemMessage != "" {
					fmt.Printf("[%s] ğŸ“¢ ç³»ç»Ÿ: %s (%s)\n", timestamp, resp.Content, resp.SystemMessage)
				} else {
					fmt.Printf("[%s] ğŸ“¢ ç³»ç»Ÿ: %s\n", timestamp, resp.Content)
				}
				
			case pb.ResponseType_RESPONSE_ERROR:
				fmt.Printf("[%s] âŒ é”™è¯¯: %s\n", timestamp, resp.Content)
				if resp.SystemMessage != "" {
					fmt.Printf("    è¯¦æƒ…: %s\n", resp.SystemMessage)
				}
				
			default:
				fmt.Printf("[%s] %s: %s\n", timestamp, resp.FromPlayerId, resp.Content)
			}
		}
	}
}

// heartbeat å®šæœŸå‘é€å¿ƒè·³
func (c *GameClient) heartbeat(ctx context.Context) {
	ticker := time.NewTicker(heartbeatInterval)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			log.Println("å¿ƒè·³åç¨‹é€€å‡º: context å·²å–æ¶ˆ")
			return
		case <-c.done:
			log.Println("å¿ƒè·³åç¨‹é€€å‡º: è¿æ¥å·²å…³é—­")
			return
		case <-ticker.C:
			if err := c.sendRequest(pb.RequestType_REQUEST_HEARTBEAT, "ping"); err != nil {
				log.Printf("å‘é€å¿ƒè·³å¤±è´¥: %v", err)
				c.done <- true
				return
			}
			log.Println("ğŸ’“ å‘é€å¿ƒè·³")
		}
	}
}

// handleUserInput å¤„ç†ç”¨æˆ·è¾“å…¥
func (c *GameClient) handleUserInput() {
	scanner := bufio.NewScanner(os.Stdin)
	fmt.Println("\n=== æ¸¸æˆå®¢æˆ·ç«¯å·²å¯åŠ¨ ===")
	fmt.Println("å‘½ä»¤:")
	fmt.Println("  /action <åŠ¨ä½œ> - æ‰§è¡Œæ¸¸æˆåŠ¨ä½œ")
	fmt.Println("  /quit - é€€å‡ºæ¸¸æˆ")
	fmt.Println("  å…¶ä»–æ–‡æœ¬ - å‘é€èŠå¤©æ¶ˆæ¯")
	fmt.Println("========================\n")

	for {
		select {
		case <-c.done:
			fmt.Println("\nè¿æ¥å·²å…³é—­ï¼Œå®¢æˆ·ç«¯é€€å‡º")
			return
		default:
			fmt.Print("> ")
			if !scanner.Scan() {
				if scanner.Err() != nil {
					log.Printf("è¯»å–è¾“å…¥é”™è¯¯: %v", scanner.Err())
				}
				return
			}

			input := strings.TrimSpace(scanner.Text())
			if input == "" {
				continue
			}

			if err := c.processInput(input); err != nil {
				log.Printf("å¤„ç†è¾“å…¥é”™è¯¯: %v", err)
				if err == io.EOF {
					return
				}
			}
		}
	}
}

// processInput å¤„ç†ç”¨æˆ·è¾“å…¥
func (c *GameClient) processInput(input string) error {
	// å¤„ç†å‘½ä»¤
	if strings.HasPrefix(input, "/") {
		parts := strings.SplitN(input, " ", 2)
		command := parts[0]

		switch command {
		case "/quit":
			if err := c.sendRequest(pb.RequestType_REQUEST_DISCONNECT, "å†è§"); err != nil {
				return err
			}
			c.done <- true
			return io.EOF

		case "/action":
			if len(parts) < 2 {
				fmt.Println("ç”¨æ³•: /action <åŠ¨ä½œæè¿°>")
				return nil
			}
			return c.sendRequest(pb.RequestType_REQUEST_ACTION, parts[1])

		default:
			fmt.Printf("æœªçŸ¥å‘½ä»¤: %s\n", command)
			return nil
		}
	}

	// æ™®é€šèŠå¤©æ¶ˆæ¯
	return c.sendRequest(pb.RequestType_REQUEST_CHAT, input)
}

// sendRequest å‘é€è¯·æ±‚
func (c *GameClient) sendRequest(reqType pb.RequestType, content string) error {
	req := &pb.GameRequest{
		PlayerId:  c.playerID,
		Content:   content,
		Timestamp: time.Now().Unix(),
		Type:      reqType,
	}

	return c.stream.Send(req)
}

func main() {
	// è·å–ç©å®¶ ID
	var playerID string
	if len(os.Args) > 1 {
		playerID = os.Args[1]
	} else {
		fmt.Print("è¯·è¾“å…¥ä½ çš„ç©å®¶åç§°: ")
		scanner := bufio.NewScanner(os.Stdin)
		if scanner.Scan() {
			playerID = strings.TrimSpace(scanner.Text())
		}
		if playerID == "" {
			playerID = fmt.Sprintf("Player_%d", time.Now().Unix()%1000)
			fmt.Printf("ä½¿ç”¨é»˜è®¤åç§°: %s\n", playerID)
		}
	}

	// åˆ›å»ºå®¢æˆ·ç«¯
	client, err := NewGameClient(playerID)
	if err != nil {
		log.Fatalf("åˆ›å»ºå®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}

	log.Printf("ç©å®¶ '%s' å‡†å¤‡åŠ å…¥æ¸¸æˆ", playerID)
	log.Printf("è¿æ¥è¶…æ—¶: %v, æµè¶…æ—¶: %v, å¿ƒè·³é—´éš”: %v",
		connectionTimeout, streamTimeout, heartbeatInterval)

	// å¯åŠ¨å®¢æˆ·ç«¯
	if err := client.Start(); err != nil {
		log.Fatalf("å¯åŠ¨å®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
}
