package main

import (
	"context"
	"fmt"
	"io"
	"log"
	"net"
	"sync"
	"time"

	pb "github.com/Artanis2333/grpc-game/proto"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/keepalive"
	"google.golang.org/grpc/status"
)

const (
	port              = ":50052" // ä½¿ç”¨ä¸åŒç«¯å£é¿å…å†²çª
	streamTimeout     = 5 * time.Minute
	heartbeatInterval = 30 * time.Second
)

// ActionRequest åŠ¨ä½œè¯·æ±‚ï¼ŒåŒ…å«è¯·æ±‚å’Œå“åº”æµ
type ActionRequest struct {
	Request  *pb.GameRequest
	PlayerID string
	Stream   pb.GameService_BidirectionalStreamServer
}

// GameServerV2 å®ç°æ¸¸æˆæœåŠ¡ï¼ˆè§£è€¦ç‰ˆæœ¬ï¼‰
type GameServerV2 struct {
	pb.UnimplementedGameServiceServer
	actionChan chan *ActionRequest  // åŠ¨ä½œè¯·æ±‚ channel
	clients    sync.Map             // å­˜å‚¨æ´»è·ƒçš„å®¢æˆ·ç«¯è¿æ¥
}

// ClientConnection å®¢æˆ·ç«¯è¿æ¥ä¿¡æ¯
type ClientConnection struct {
	stream     pb.GameService_BidirectionalStreamServer
	playerID   string
	lastActive time.Time
	cancel     context.CancelFunc
	mu         sync.Mutex
}

// NewGameServerV2 åˆ›å»ºæ–°çš„æ¸¸æˆæœåŠ¡å™¨
func NewGameServerV2() *GameServerV2 {
	return &GameServerV2{
		actionChan: make(chan *ActionRequest, 100), // ç¼“å†² channel
	}
}

// BidirectionalStream å®ç°åŒå‘æµå¼é€šä¿¡
func (s *GameServerV2) BidirectionalStream(stream pb.GameService_BidirectionalStreamServer) error {
	// åˆ›å»ºå¸¦è¶…æ—¶çš„ context
	ctx, cancel := context.WithTimeout(stream.Context(), streamTimeout)
	defer cancel()

	var playerID string
	clientConn := &ClientConnection{
		stream:     stream,
		lastActive: time.Now(),
		cancel:     cancel,
	}

	// å¯åŠ¨è¶…æ—¶æ£€æŸ¥åç¨‹
	errChan := make(chan error, 1)
	go s.monitorTimeout(ctx, clientConn, errChan)

	// æ¥æ”¶æ¶ˆæ¯
	go func() {
		for {
			select {
			case <-ctx.Done():
				errChan <- ctx.Err()
				return
			default:
				req, err := stream.Recv()
				if err == io.EOF {
					log.Printf("å®¢æˆ·ç«¯ %s å…³é—­äº†è¿æ¥", playerID)
					errChan <- nil
					return
				}
				if err != nil {
					log.Printf("æ¥æ”¶æ¶ˆæ¯é”™è¯¯: %v", err)
					errChan <- err
					return
				}

				// æ›´æ–°æœ€åæ´»è·ƒæ—¶é—´
				clientConn.mu.Lock()
				clientConn.lastActive = time.Now()
				clientConn.mu.Unlock()

				// å¤„ç†æ¶ˆæ¯
				if err := s.handleRequest(ctx, req, clientConn, &playerID); err != nil {
					errChan <- err
					return
				}
			}
		}
	}()

	// ç­‰å¾…é”™è¯¯æˆ–å®Œæˆ
	err := <-errChan
	if playerID != "" {
		s.clients.Delete(playerID)
		log.Printf("ç©å®¶ %s æ–­å¼€è¿æ¥", playerID)
	}

	return err
}

// handleRequest å¤„ç†æ¥æ”¶åˆ°çš„è¯·æ±‚
func (s *GameServerV2) handleRequest(ctx context.Context, req *pb.GameRequest, conn *ClientConnection, playerID *string) error {
	log.Printf("æ”¶åˆ°è¯·æ±‚ - ç©å®¶: %s, ç±»å‹: %v, å†…å®¹: %s", req.PlayerId, req.Type, req.Content)

	// é¦–æ¬¡è¿æ¥ï¼Œä¿å­˜å®¢æˆ·ç«¯ä¿¡æ¯
	if *playerID == "" {
		*playerID = req.PlayerId
		conn.playerID = req.PlayerId
		s.clients.Store(req.PlayerId, conn)
		log.Printf("ç©å®¶ %s å·²è¿æ¥", req.PlayerId)

		// å‘é€æ¬¢è¿æ¶ˆæ¯
		welcomeMsg := &pb.GameResponse{
			FromPlayerId:  "ç³»ç»Ÿ",
			Content:       fmt.Sprintf("æ¬¢è¿ %s åŠ å…¥æ¸¸æˆï¼ï¼ˆV2æœåŠ¡å™¨ - Channelæ¶æ„ï¼‰", req.PlayerId),
			Timestamp:     time.Now().Unix(),
			Type:          pb.ResponseType_RESPONSE_SYSTEM,
			SystemMessage: "è¿æ¥æˆåŠŸ",
		}
		if err := conn.stream.Send(welcomeMsg); err != nil {
			return err
		}
	}

	switch req.Type {
	case pb.RequestType_REQUEST_HEARTBEAT:
		// å“åº”å¿ƒè·³
		response := &pb.GameResponse{
			FromPlayerId: "æœåŠ¡å™¨",
			Content:      "pong",
			Timestamp:    time.Now().Unix(),
			Type:         pb.ResponseType_RESPONSE_HEARTBEAT,
		}
		return conn.stream.Send(response)

	case pb.RequestType_REQUEST_ACTION:
		// å°†åŠ¨ä½œè¯·æ±‚å‘é€åˆ° channelï¼Œç”±ä¸“é—¨çš„åç¨‹å¤„ç†
		actionReq := &ActionRequest{
			Request:  req,
			PlayerID: *playerID,
			Stream:   conn.stream,
		}
		
		select {
		case s.actionChan <- actionReq:
			log.Printf("åŠ¨ä½œè¯·æ±‚å·²å‘é€åˆ°å¤„ç†é˜Ÿåˆ—: ç©å®¶=%s, åŠ¨ä½œ=%s", *playerID, req.Content)
		case <-ctx.Done():
			return ctx.Err()
		default:
			// channel æ»¡äº†ï¼Œå‘é€é”™è¯¯å“åº”
			errorMsg := &pb.GameResponse{
				FromPlayerId:  "æœåŠ¡å™¨",
				Content:       "æœåŠ¡å™¨ç¹å¿™ï¼Œè¯·ç¨åé‡è¯•",
				Timestamp:     time.Now().Unix(),
				Type:          pb.ResponseType_RESPONSE_ERROR,
				SystemMessage: "åŠ¨ä½œé˜Ÿåˆ—å·²æ»¡",
			}
			return conn.stream.Send(errorMsg)
		}
		return nil

	case pb.RequestType_REQUEST_DISCONNECT:
		log.Printf("ç©å®¶ %s è¯·æ±‚æ–­å¼€è¿æ¥", req.PlayerId)
		return io.EOF

	default:
		log.Printf("æœªçŸ¥è¯·æ±‚ç±»å‹: %v", req.Type)
		errorMsg := &pb.GameResponse{
			FromPlayerId:  "æœåŠ¡å™¨",
			Content:       "æœªçŸ¥çš„è¯·æ±‚ç±»å‹",
			Timestamp:     time.Now().Unix(),
			Type:          pb.ResponseType_RESPONSE_ERROR,
			SystemMessage: fmt.Sprintf("é”™è¯¯: æœªçŸ¥è¯·æ±‚ç±»å‹ %v", req.Type),
		}
		return conn.stream.Send(errorMsg)
	}
}

// monitorTimeout ç›‘æ§è¿æ¥è¶…æ—¶
func (s *GameServerV2) monitorTimeout(ctx context.Context, conn *ClientConnection, errChan chan error) {
	ticker := time.NewTicker(10 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return
		case <-ticker.C:
			conn.mu.Lock()
			elapsed := time.Since(conn.lastActive)
			conn.mu.Unlock()

			if elapsed > streamTimeout {
				log.Printf("ç©å®¶ %s è¿æ¥è¶…æ—¶ (æ— æ´»åŠ¨æ—¶é—´: %v)", conn.playerID, elapsed)
				errChan <- status.Error(codes.DeadlineExceeded, "è¿æ¥è¶…æ—¶")
				return
			}
		}
	}
}

// processActionRequests å¤„ç†åŠ¨ä½œè¯·æ±‚çš„ä¸“ç”¨åç¨‹
func (s *GameServerV2) processActionRequests(ctx context.Context) {
	log.Println("ğŸ® åŠ¨ä½œå¤„ç†åç¨‹å·²å¯åŠ¨")
	
	for {
		select {
		case <-ctx.Done():
			log.Println("ğŸ›‘ åŠ¨ä½œå¤„ç†åç¨‹é€€å‡º")
			return
			
		case actionReq := <-s.actionChan:
			// å¤„ç†åŠ¨ä½œè¯·æ±‚
			s.handleAction(actionReq)
		}
	}
}

// handleAction å¤„ç†å…·ä½“çš„åŠ¨ä½œ
func (s *GameServerV2) handleAction(actionReq *ActionRequest) {
	log.Printf("âš¡ å¤„ç†åŠ¨ä½œ: ç©å®¶=%s, å†…å®¹=%s", actionReq.PlayerID, actionReq.Request.Content)
	
	// æ¨¡æ‹Ÿå¤„ç†æ—¶é—´ï¼ˆå¯ä»¥æ˜¯å¤æ‚çš„æ¸¸æˆé€»è¾‘ï¼‰
	time.Sleep(100 * time.Millisecond)
	
	// æ„é€ å“åº”
	response := &pb.GameResponse{
		FromPlayerId:  "æ¸¸æˆå¼•æ“",
		Content:       fmt.Sprintf("å·²å¤„ç†åŠ¨ä½œ: %s", actionReq.Request.Content),
		Timestamp:     time.Now().Unix(),
		Type:          pb.ResponseType_RESPONSE_ACTION,
		SystemMessage: fmt.Sprintf("ç©å®¶ %s çš„åŠ¨ä½œå·²æ‰§è¡Œ", actionReq.PlayerID),
	}
	
	// å‘é€å“åº”ç»™è¯·æ±‚çš„å®¢æˆ·ç«¯
	if err := actionReq.Stream.Send(response); err != nil {
		log.Printf("âŒ å‘é€åŠ¨ä½œå“åº”å¤±è´¥: ç©å®¶=%s, é”™è¯¯=%v", actionReq.PlayerID, err)
		return
	}
	
	log.Printf("âœ… åŠ¨ä½œå“åº”å·²å‘é€: ç©å®¶=%s", actionReq.PlayerID)
	
	// å¯é€‰ï¼šå¹¿æ’­ç»™æ‰€æœ‰å…¶ä»–å®¢æˆ·ç«¯
	s.broadcastAction(actionReq.PlayerID, response)
}

// broadcastAction å¹¿æ’­åŠ¨ä½œç»™æ‰€æœ‰å…¶ä»–å®¢æˆ·ç«¯
func (s *GameServerV2) broadcastAction(excludePlayerID string, resp *pb.GameResponse) {
	s.clients.Range(func(key, value interface{}) bool {
		playerID := key.(string)
		if playerID == excludePlayerID {
			return true // è·³è¿‡å‘èµ·è€…
		}

		conn := value.(*ClientConnection)
		conn.mu.Lock()
		err := conn.stream.Send(resp)
		conn.mu.Unlock()

		if err != nil {
			log.Printf("å¹¿æ’­å¤±è´¥: ç©å®¶=%s, é”™è¯¯=%v", playerID, err)
			s.clients.Delete(playerID)
		}
		return true
	})
}

func main() {
	// åˆ›å»º TCP ç›‘å¬å™¨
	lis, err := net.Listen("tcp", port)
	if err != nil {
		log.Fatalf("ç›‘å¬å¤±è´¥: %v", err)
	}

	// é…ç½® keepalive å‚æ•°
	kaep := keepalive.EnforcementPolicy{
		MinTime:             5 * time.Second,
		PermitWithoutStream: true,
	}

	kasp := keepalive.ServerParameters{
		MaxConnectionIdle:     2 * time.Minute,
		MaxConnectionAge:      30 * time.Minute,
		MaxConnectionAgeGrace: 5 * time.Second,
		Time:                  10 * time.Second,
		Timeout:               3 * time.Second,
	}

	// åˆ›å»º gRPC æœåŠ¡å™¨
	grpcServer := grpc.NewServer(
		grpc.KeepaliveEnforcementPolicy(kaep),
		grpc.KeepaliveParams(kasp),
	)

	// åˆ›å»ºæ¸¸æˆæœåŠ¡å™¨å®ä¾‹
	gameServer := NewGameServerV2()
	pb.RegisterGameServiceServer(grpcServer, gameServer)

	// å¯åŠ¨åŠ¨ä½œå¤„ç†åç¨‹
	ctx := context.Background()
	go gameServer.processActionRequests(ctx)

	log.Println("========================================")
	log.Printf("ğŸš€ æœåŠ¡å™¨ V2 å¯åŠ¨åœ¨ç«¯å£ %s", port)
	log.Printf("ğŸ“Š æ¶æ„: Channel è§£è€¦æ¨¡å¼")
	log.Printf("â° æµè¶…æ—¶æ—¶é—´: %v", streamTimeout)
	log.Printf("ğŸ’“ å¿ƒè·³é—´éš”: %v", heartbeatInterval)
	log.Printf("ğŸ® åŠ¨ä½œå¤„ç†: ä¸“ç”¨åç¨‹")
	log.Println("========================================")

	// å¯åŠ¨æœåŠ¡å™¨
	if err := grpcServer.Serve(lis); err != nil {
		log.Fatalf("æœåŠ¡å¯åŠ¨å¤±è´¥: %v", err)
	}
}
